--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="product-card">
             <img src="assets/images/rolls_image.jpg" alt="Rolls">
             <h3>Rolls</h3>
-            <p>Indulge in our delightful rolls, crafted with precision and love. A perfect treat for any occasion.</p>
+            <p>Indulge in our individually wrapped delightful rolls, crafted with precision and love. A perfect treat for any occasion.</p>
         </div>
         <div class="product-card">
             <img src="assets/images/boxes_image.jpg" alt="Boxes">
